--- a/src/Components/Card/card.module.scss
+++ b/src/Components/Card/card.module.scss
@@ -1,9 +1,10 @@
 div.card {
-  background-color: orange;
+  background-color: #E8F8F5;
   border-radius: 5px;
   padding: 1.5rem;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  
+  // margin: 1%;
+
   & > :first-child {
     margin-top: 0;
   }
