--- a/src/Components/Header/header.module.scss
+++ b/src/Components/Header/header.module.scss
@@ -3,6 +3,11 @@
 
   a {
     margin-left: 10px;
+
+    &:hover{
+      text-decoration: none;
+      border-bottom:1px solid #444;
+    }
   }
 
   button {
